<?xml version="1.0"?>
<package format="2">
  <name>nmea_to_geopose</name>
  <version>0.0.0</version>
  <description>The nmea_to_geopose package</description>

  <maintainer email="ms.kataoka@gmail.com">Masaya Kataoka</maintainer>

  <license>Apachi 2</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geodesy</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_depend>nmea_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libgoogle-glog-dev</build_depend>
  <build_export_depend>geodesy</build_export_depend>
  <build_export_depend>geographic_msgs</build_export_depend>
  <build_export_depend>nmea_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>libgoogle-glog-dev</build_export_depend>
  <exec_depend>geodesy</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
  <exec_depend>nmea_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>libgoogle-glog-dev</exec_depend>

  <export>
  </export>
</package>
