<?xml version="1.0"?>
<package format="3">
  <name>nmea_to_geopose</name>
  <version>0.0.1</version>
  <description>The nmea_to_geopose package</description>

  <maintainer email="ms.kataoka@gmail.com">Masaya Kataoka</maintainer>

  <license>Apache 2.0</license>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>geodesy</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_depend>nmea_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>quaternion_operation</build_depend>
  <build_depend>libgoogle-glog-dev</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_export_depend>geodesy</build_export_depend>
  <build_export_depend>geographic_msgs</build_export_depend>
  <build_export_depend>nmea_msgs</build_export_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>rclcpp_components</build_export_depend>
  <build_export_depend>quaternion_operation</build_export_depend>
  <build_export_depend>libgoogle-glog-dev</build_export_depend>
  <build_export_depend>eigen</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <exec_depend>geodesy</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
  <exec_depend>nmea_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>quaternion_operation</exec_depend>
  <exec_depend>libgoogle-glog-dev</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
